Fix page overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+.page {
+  overflow: hidden;
+}
+
 .page--home {
   height: 90vh;
 }
